--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
 </head>
 <body>
     
+    <h1>The Adding Machine Website</h1>
+    <button onclick="dontClick()">Do not click this button</button>
+    <button onclick="darkMode()" id="dark-mode">Activate Dark Mode</button>
+    <br>
+    <h2>Number Adder</h2>
+    <label for="number-1">Please enter your first number</label>
+    <br>
+    <input id="number-1" type="number">
+    <br>
+    <label for="number-2">Please enter your second number</label>
+    <br>
+    <input id="number-2" type="number">
+    <button type="button" onclick="addingMachine()">Add Numbers</button>
+    <p id="results"></p>
+
+    <h2>Meow</h2>
+    <img src="assets/images/cat.png" alt="A wide-eyed cat" width=500px onclick="meow()">
+
+
+
     <script src="assets/js/script.js"></script>
 
 
